removing the picked names

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           Turns Taken: <span class="turns-taken" data-bind="text: turnsTaken"></span>
         </div>
         <div class="col-xs-6">
-          Picked Tiles:<br>
+          <!-- Picked Tiles:<br> -->
           <div class="hidden pick" data-bind="if: pickedTile1, css: { hidden: false }">
-            <span data-bind="visible: pickedTile1, text: pickedTile1().name"></span>
+            <!-- <span data-bind="visible: pickedTile1, text: pickedTile1().name"></span> -->
           </div>
             <div class="hidden pick" data-bind="if: pickedTile2, css: { hidden: false }">
-              <span data-bind="visible: pickedTile2, text: pickedTile2().name"></span>
+              <!-- <span data-bind="visible: pickedTile2, text: pickedTile2().name"></span> -->
           </div>
         </div>
       </div>
