finished for class

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div class="hidden game-over" data-bind="visible: matchesLeft() === 0, css: { hidden: false }">
       <p>You Won!</p>
       <p>It took you <span data-bind="text: turnsTaken"></span> turns.</p>
+      <p> Secret Text : <b> pineapple doesn't belong on pizza </b> </p>
       <button class="btn btn-lg btn-primary btn-play-again"  data-bind="click: playAgain">Play Again</button>
     </div>
 
